cmake_minimum_required(VERSION 3.5)
project(vsftpd_3_0_3)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    dummyinc/openssl/ssl.h
    dummyinc/security/pam_appl.h
    dummyinc/sys/capability.h
    dummyinc/sys/prctl.h
    dummyinc/sys/sendfile.h
    dummyinc/crypt.h
    dummyinc/shadow.h
    dummyinc/utmpx.h
    port/aix_bogons.h
    port/cmsg_extras.h
    port/dirfd_extras.h
    port/hpux_bogons.h
    port/irix_bogons.h
    port/porting_junk.h
    port/solaris_bogons.h
    port/tru64_bogons.h
    access.c
    access.h
    ascii.c
    ascii.h
    banner.c
    banner.h
    builddefs.h
    defs.h
    features.c
    features.h
    filesize.h
    filestr.c
    filestr.h
    ftpcmdio.c
    ftpcmdio.h
    ftpcodes.h
    ftpdataio.c
    ftpdataio.h
    ftppolicy.c
    ftppolicy.h
    hash.c
    hash.h
    ipaddrparse.c
    ipaddrparse.h
    logging.c
    logging.h
    ls.c
    ls.h
    main.c
    netstr.c
    netstr.h
    oneprocess.c
    oneprocess.h
    opts.c
    opts.h
    parseconf.c
    parseconf.h
    postlogin.c
    postlogin.h
    postprivparent.c
    postprivparent.h
    prelogin.c
    prelogin.h
    privops.c
    privops.h
    privsock.c
    privsock.h
    ptracesandbox.c
    ptracesandbox.h
    readwrite.c
    readwrite.h
    secbuf.c
    secbuf.h
    seccompsandbox.c
    seccompsandbox.h
    secutil.c
    secutil.h
    session.h
    ssl.c
    ssl.h
    sslslave.c
    sslslave.h
    standalone.c
    standalone.h
    str.c
    str.h
    strlist.c
    strlist.h
    sysdeputil.c
    sysdeputil.h
    sysstr.c
    sysstr.h
    sysutil.c
    sysutil.h
    tcpwrap.c
    tcpwrap.h
    tunables.c
    tunables.h
    twoprocess.c
    twoprocess.h
    utility.c
    utility.h
    vsftpver.h)

add_executable(vsftpd_3_0_3 ${SOURCE_FILES})